--- a/common.css
+++ b/common.css
@@ -42,6 +42,46 @@
     color: rgba(var(--white-rgb), 1) !important;
 }
 
+.brandanimation{
+    height: 1000;
+}
+
+.mintcommingsoon{
+    background-color: rgba(var(--base-rgb), 1) !important;
+    text-align: center;
+}
+
+.saveplanet{
+    background-color: rgba(var(--base-rgb), 1) !important;
+    text-align: center;
+}
+
+.joindcbutton{
+    border: none;
+    color: rgb(245, 150, 232);
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    background-color: white; 
+    color: black; 
+    border: 2px solid #4CAF50;
+}
+.family{
+    background-color: black;
+    color:white;
+    text-align: center;
+}
+.faq{
+    text-align: center;
+    color:white;
+    background-color: black;
+}
+
 .footer{
     background-color: #443750;
 }
