--- a/common.css
+++ b/common.css
@@ -56,9 +56,26 @@
     text-align: center;
 }
 
+.AN{
+    background-color: #000000;
+    color:#FFFFFF;
+    text-align: center;
+}
+.figure{
+    width:100;
+    height:100;
+    color: #000000;
+    background-color: #FFFFFF;
+}
+.howtojoin{
+    width: 200;
+    height: 50;
+    border:1px;
+    text-align: center;
+}
 .joindcbutton{
     border: none;
-    color: rgb(245, 150, 232);
+    color: rgb(238, 89, 218);
     padding: 16px 32px;
     text-align: center;
     text-decoration: none;
