--- a/common.css
+++ b/common.css
@@ -30,6 +30,10 @@
     background-color: rgba(var(--white-rgb), 1) !important;
 }
 
+.bg-primary-linear {
+    background: linear-gradient(90deg, var(--linear-c2), var(--linear-c1)); !important;
+}
+
 .text-brand {
     color: rgba(var(--brand-rgb), 1) !important;
 }
@@ -40,65 +44,4 @@
 
 .text-white {
     color: rgba(var(--white-rgb), 1) !important;
-}
-
-.brandanimation{
-    height: 1000;
-}
-
-.mintcommingsoon{
-    background-color: rgba(var(--base-rgb), 1) !important;
-    text-align: center;
-}
-
-.saveplanet{
-    background-color: rgba(var(--base-rgb), 1) !important;
-    text-align: center;
-}
-
-.AN{
-    background-color: #000000;
-    color:#FFFFFF;
-    text-align: center;
-}
-.figure{
-    width:100;
-    height:100;
-    color: #000000;
-    background-color: #FFFFFF;
-}
-.howtojoin{
-    width: 200;
-    height: 50;
-    border:1px;
-    text-align: center;
-}
-.joindcbutton{
-    border: none;
-    color: rgb(238, 89, 218);
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    background-color: white; 
-    color: black; 
-    border: 2px solid #4CAF50;
-}
-.family{
-    background-color: black;
-    color:white;
-    text-align: center;
-}
-.faq{
-    text-align: center;
-    color:white;
-    background-color: black;
-}
-
-.footer{
-    background-color: #443750;
 }
