--- a/style.css
+++ b/style.css
@@ -22,14 +22,10 @@
     /*transition-duration: 0.4s;*/
 }
 
-.mint-coming-soon-box {
-    position: relative;
-    z-index: 1;
-    margin: -5rem;
-}
-
 .mint-coming-soon{
-    border-radius: 1.2rem 1.2rem 0 0;
+    padding: 2rem 4rem;
+    box-shadow: 0 0 1rem 0.3rem rgba(255, 255, 255, 0.3);
+    border-radius: 1.2rem;
 }
 
 .saveplanet {
