--- a/style.css
+++ b/style.css
@@ -1,18 +1,3 @@
-.full-layout {
-    height: calc(100% - 74px); /* 滿版高度為100% 扣 header或footer高度 */
-    width: 100%; /* 寬度滿版 */
-}
-
-.bg-full {
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.brand-animation {
-    position: relative;
-}
-
 .join-discord-btn {
     position: absolute;
     left: 0;
@@ -28,14 +13,12 @@
     border-radius: 1.2rem;
 }
 
-.saveplanet {
-    background-color: rgba(var(--base-rgb), 1) !important;
-    text-align: center;
+.mint-progress-bar {
+    border-radius: 6px;
 }
 
-.AN {
-    background-color: #000000;
-    color: #FFFFFF;
+.saveplanet {
+    background-color: rgba(var(--base-rgb), 1) !important;
     text-align: center;
 }
 
@@ -50,12 +33,6 @@
     width: 200;
     height: 50;
     border: 1px;
-    text-align: center;
-}
-
-.family {
-    background-color: black;
-    color: white;
     text-align: center;
 }
 
