--- a/common.css
+++ b/common.css
@@ -94,3 +94,33 @@
 .animate-on-hover {
     cursor: pointer;
 }
+
+/* swiper */
+.swiper-img {
+    border-radius: 1rem;
+    height: 200px;
+}
+@media (min-width: 576px) {
+}
+@media (min-width: 768px) {
+}
+@media (min-width: 992px) {
+    .swiper-img {
+        border-radius: 2rem;
+        height: 250px;
+    }
+}
+@media (min-width: 1200px) {
+    .swiper-img {
+        border-radius: 3rem;
+        height: 300px;
+    }
+}
+@media (min-width: 1400px) {
+}
+.swiper-img:hover {
+    transform: scale(1.2);
+    transform-origin: center center;
+    transition-duration: 750ms;
+    z-index: 1;
+}
