--- a/common.css
+++ b/common.css
@@ -57,6 +57,12 @@
     background-repeat: no-repeat;
 }
 
+.bg-contain {
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 /* banner */
 .banner-layout {
     border-radius: 1rem;
@@ -81,8 +87,19 @@
 @media (min-width: 1400px) {
 }
 
-.banner-text {
+.banner-text-lg {
     font-size: 4rem;
+    line-height: 6rem;
+}
+
+.banner-text-md {
+    font-size: 2.5rem;
+    line-height: 3.5rem;
+}
+
+.banner-text-sm {
+    font-size: 1.5rem;
+    line-height: 2.2rem;
 }
 
 .move-up-5 {
