--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: Rubik;
+    src: url("assets/font/Rubik-Black.ttf");
+    font-weight: 999;
+    font-style: normal;
+}
+
+* {
+    font-size: 100%;
+    font-family: Rubik, Verdana, sans-serif;
+}
+
 .join-discord-btn {
     position: absolute;
     left: 0;
