文章輪播圖

--- a/assets/lib/swiper/swiper-bundle.css
+++ b/assets/lib/swiper/swiper-bundle.css
@@ -224,7 +224,7 @@
 }
 .swiper-button-prev:after,
 .swiper-rtl .swiper-button-next:after {
-  content: 'prev';
+  content: '';
 }
 .swiper-button-next,
 .swiper-rtl .swiper-button-prev {
@@ -233,7 +233,7 @@
 }
 .swiper-button-next:after,
 .swiper-rtl .swiper-button-prev:after {
-  content: 'next';
+  content: '';
 }
 .swiper-button-lock {
   display: none;
