--- a/common.css
+++ b/common.css
@@ -108,12 +108,19 @@
     margin-top: -5rem;
 }
 
+.btn-circle {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    text-align: center;
+}
+
 .animate-on-hover {
     cursor: pointer;
 }
 
 /* swiper */
-.swiper-img {
+.character-img {
     border-radius: 1rem;
     height: 200px;
 }
@@ -122,20 +129,20 @@
 @media (min-width: 768px) {
 }
 @media (min-width: 992px) {
-    .swiper-img {
+    .character-img {
         border-radius: 2rem;
         height: 250px;
     }
 }
 @media (min-width: 1200px) {
-    .swiper-img {
+    .character-img {
         border-radius: 3rem;
         height: 300px;
     }
 }
 @media (min-width: 1400px) {
 }
-.swiper-img:hover {
+.character-img:hover {
     transform: scale(1.2);
     transform-origin: center center;
     transition-duration: 750ms;
@@ -159,7 +166,6 @@
     color: white;
   }
 
-
   .answer{
       color: black;
       background-color: white;
@@ -167,71 +173,6 @@
       
   }
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
 
 /* Fading animation */
 .fade {
