--- a/style.css
+++ b/style.css
@@ -34,22 +34,17 @@
     cursor: pointer;
 }
 
+.article-card {
+    padding: 0;
+    box-shadow: 0 0 0.8rem 0.1rem rgba(255, 255, 255, 0.2);
+    border-radius: 2rem;
+}
+
+.article-image {
+}
+
 .saveplanet {
     background-color: rgba(var(--base-rgb), 1) !important;
-    text-align: center;
-}
-
-.figure {
-    width: 100;
-    height: 100;
-    color: #000000;
-    background-color: #FFFFFF;
-}
-
-.howtojoin {
-    width: 200;
-    height: 50;
-    border: 1px;
     text-align: center;
 }
 
