--- a/common.css
+++ b/common.css
@@ -102,10 +102,26 @@
     line-height: 2.2rem;
 }
 
+.move-up-half {
+    position: relative;
+    transform: translateY(-50%);
+}
+
+.move-down-half {
+    position: relative;
+    transform: translateY(50%);
+}
+
 .move-up-5 {
     position: relative;
     z-index: 1;
     margin-top: -5rem;
+}
+
+.move-down-5 {
+    position: relative;
+    z-index: 1;
+    margin-bottom: -5rem;
 }
 
 .btn-circle {
@@ -190,8 +206,4 @@
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
-}
-
-.test {
-    z-index: 100;
 }
