--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@
     /*transition-duration: 0.4s;*/
 }
 
+.dress-btn{
+    transform: scale(2.0);
+}
+
 .mint-coming-soon{
     padding: 2rem 4rem;
     box-shadow: 0 0 1rem 0.3rem rgba(255, 255, 255, 0.3);
