--- a/common.css
+++ b/common.css
@@ -125,8 +125,16 @@
     margin-bottom: -5rem;
 }
 
+.move-left-4 {
+    margin-left: -4rem;
+}
+
 .move-left-5 {
     margin-left: -5rem;
+}
+
+.move-right-4 {
+    margin-right: -4rem;
 }
 
 .move-right-5 {
