--- a/style.css
+++ b/style.css
@@ -19,11 +19,32 @@
     /*transition-duration: 0.4s;*/
 }
 
-.dress-btn{
+.dress-accessory-box {
+    border-radius: 1.5rem;
+    box-shadow: 2px 5px 5px rgba(var(--bs-black-rgb), 0.5);
+}
+
+.dress-btn {
     transform: scale(2.0);
 }
 
-.mint-coming-soon{
+.dress img {
+    position: absolute;
+    display:inline-block;
+    height:100%;
+}
+
+.main-body-box {
+    position: relative;
+    /*border: solid 10px white;*/
+}
+
+.main-body {
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+}
+
+.mint-coming-soon {
     padding: 2rem 4rem;
     box-shadow: 0 0 1rem 0.3rem rgba(255, 255, 255, 0.3);
     border-radius: 1.2rem;
