--- a/common.css
+++ b/common.css
@@ -88,7 +88,7 @@
 @media (min-width: 1200px) {
     .banner-layout {
         border-radius: 3rem;
-        height: 40vh;
+        height: 36vh;
     }
 }
 @media (min-width: 1400px) {
@@ -108,6 +108,38 @@
     font-size: 1.5rem;
     line-height: 2.2rem;
 }
+
+.banner-long-text {
+    font-size: 1rem;
+    line-height: 1.2rem;
+}
+@media (min-width: 576px) {
+    .banner-long-text {
+        font-size: 1.2rem;
+        line-height: 2.2rem;
+    }
+}
+@media (min-width: 768px) {
+    .banner-long-text {
+        font-size: 1.3rem;
+        line-height: 2.5rem;
+    }
+}
+@media (min-width: 992px) {
+    .banner-long-text {
+        font-size: 1.35rem;
+        line-height: 2.8rem;
+    }
+}
+@media (min-width: 1200px) {
+    .banner-long-text {
+        font-size: 1.5rem;
+        line-height: 3rem;
+    }
+}
+@media (min-width: 1400px) {
+}
+
 
 .move-up-half {
     transform: translateY(-50%);
