--- a/style.css
+++ b/style.css
@@ -19,6 +19,16 @@
     /*transition-duration: 0.4s;*/
 }
 
+.mint-coming-soon {
+    padding: 2rem 4rem;
+    box-shadow: 0 0 1rem 0.3rem rgba(255, 255, 255, 0.3);
+    border-radius: 2.2rem;
+}
+
+.mint-progress-bar {
+    border-radius: 6px;
+}
+
 .dress-accessory-box {
     border-radius: 1.5rem;
     box-shadow: 2px 5px 5px rgba(var(--bs-black-rgb), 0.5);
@@ -44,14 +54,8 @@
     top: 0; right: 0; bottom: 0; left: 0;
 }
 
-.mint-coming-soon {
-    padding: 2rem 4rem;
-    box-shadow: 0 0 1rem 0.3rem rgba(255, 255, 255, 0.3);
-    border-radius: 1.2rem;
-}
+.roadmap-box {
 
-.mint-progress-bar {
-    border-radius: 6px;
 }
 
 .faq-box {
