--- a/style.css
+++ b/style.css
@@ -10,6 +10,36 @@
     font-family: Rubik, Verdana, sans-serif;
 }
 
+.hamburger-menu {
+    position: absolute;
+    top: 1.2rem;
+    right: 1.2rem;
+    padding: 1.6rem;
+    border: solid 1px rgba(var(--white-rgb), 0.1);
+    z-index: 1;
+}
+@media (min-width: 576px) {
+    .hamburger-menu {
+        top: 1.5rem;
+        right: 1.5rem;
+        padding: 1.8rem;
+    }
+}
+@media (min-width: 768px) {
+    .hamburger-menu {
+        top: 2.2rem;
+        right: 2.2rem;
+        padding: 2.2rem;
+    }
+}
+@media (min-width: 992px) {
+    .hamburger-menu {
+        top: 2.5rem;
+        right: 2.5rem;
+        padding: 2.5rem;
+    }
+}
+
 .join-discord-btn {
     position: absolute;
     left: 0;
