--- a/common.css
+++ b/common.css
@@ -93,6 +93,10 @@
 }
 
 /* banner */
+p.banner-layout {
+    border-radius: 1rem;
+    height: 20vh;
+}
 .banner-layout {
     border-radius: 1rem;
     height: 30vh;
@@ -116,45 +120,74 @@
 @media (min-width: 1400px) {
 }
 
-.banner-text-lg {
-    font-size: 4rem;
-    line-height: 6rem;
+.banner-text-h1 {
+    font-size: 2rem;
+    line-height: 3rem;
 }
-
-.banner-text-md {
-    font-size: 2.5rem;
-    line-height: 3.5rem;
+.banner-text-h2 {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
 }
-
-.banner-text-sm {
-    font-size: 1.5rem;
+.banner-text-h4 {
+    font-size: 1rem;
     line-height: 2.4rem;
 }
-
-.banner-long-text {
+.banner-text-h6 {
     font-size: 1rem;
     line-height: 1.2rem;
 }
 @media (min-width: 576px) {
-    .banner-long-text {
+    .banner-text-h1 {
+        font-size: 2.4rem;
+        line-height: 3.6rem;
+    }
+    .banner-text-h2 {
+        font-size: 1.5rem;
+        line-height: 2.1rem;
+    }
+    .banner-text-h6 {
         font-size: 1.2rem;
         line-height: 2.2rem;
     }
 }
 @media (min-width: 768px) {
-    .banner-long-text {
+    .banner-text-h1 {
+        font-size: 3.2rem;
+        line-height: 4.8rem;
+    }
+    .banner-text-h2 {
+        font-size: 2.0rem;
+        line-height: 2.8rem;
+    }
+    .banner-text-h6 {
         font-size: 1.3rem;
         line-height: 2.5rem;
     }
 }
 @media (min-width: 992px) {
-    .banner-long-text {
+    .banner-text-h1 {
+        font-size: 3.6rem;
+        line-height: 5.4rem;
+    }
+    .banner-text-h2 {
+        font-size: 2.25rem;
+        line-height: 3.15rem;
+    }
+    .banner-text-h6 {
         font-size: 1.35rem;
         line-height: 2.8rem;
     }
 }
 @media (min-width: 1200px) {
-    .banner-long-text {
+    .banner-text-h1 {
+        font-size: 4rem;
+        line-height: 6rem;
+    }
+    .banner-text-h2 {
+        font-size: 2.5rem;
+        line-height: 3.5rem;
+    }
+    .banner-text-h6 {
         font-size: 1.5rem;
         line-height: 3rem;
     }
