--- a/common.css
+++ b/common.css
@@ -134,7 +134,7 @@ p.banner-layout {
 }
 .banner-text-h6 {
     font-size: 1rem;
-    line-height: 1.2rem;
+    line-height: 1.5rem;
 }
 @media (min-width: 576px) {
     .banner-text-h1 {
@@ -144,6 +144,10 @@ p.banner-layout {
     .banner-text-h2 {
         font-size: 1.5rem;
         line-height: 2.1rem;
+    }
+    .banner-text-h4 {
+        font-size: 1.1rem;
+        line-height: 1.8rem;
     }
     .banner-text-h6 {
         font-size: 1.2rem;
@@ -159,6 +163,10 @@ p.banner-layout {
         font-size: 2.0rem;
         line-height: 2.8rem;
     }
+    .banner-text-h4 {
+        font-size: 1.45rem;
+        line-height: 2.4rem;
+    }
     .banner-text-h6 {
         font-size: 1.3rem;
         line-height: 2.5rem;
@@ -172,6 +180,10 @@ p.banner-layout {
     .banner-text-h2 {
         font-size: 2.25rem;
         line-height: 3.15rem;
+    }
+    .banner-text-h4 {
+        font-size: 1.6rem;
+        line-height: 2.7rem;
     }
     .banner-text-h6 {
         font-size: 1.35rem;
@@ -187,9 +199,13 @@ p.banner-layout {
         font-size: 2.5rem;
         line-height: 3.5rem;
     }
+    .banner-text-h4 {
+        font-size: 1.8rem;
+        line-height: 3.0rem;
+    }
     .banner-text-h6 {
         font-size: 1.5rem;
-        line-height: 3rem;
+        line-height: 3.0rem;
     }
 }
 @media (min-width: 1400px) {
