--- a/v1/style.css
+++ b/v1/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Rubik;
-    src: url("v1/assets/font/Rubik-Black.ttf");
+    src: url("assets/font/Rubik-Black.ttf");
     font-weight: 999;
     font-style: normal;
 }
