--- a/v1/style.css
+++ b/v1/style.css
@@ -62,8 +62,6 @@
     right: 0;
     top: calc(100vh - 40%);
     z-index: 1;
-    /*letter-spacing: 0.1rem;*/
-    /*transition-duration: 0.4s;*/
 }
 
 .mint-coming-soon {
@@ -119,10 +117,11 @@
     border-radius: 2rem;
 }
 
-.card-text{
+.swiper-button-prev:after,
+.swiper-rtl .swiper-button-next:after {
+    content: '';
 }
-
-.article-image {
+.swiper-button-next:after,
+.swiper-rtl .swiper-button-prev:after {
+    content: '';
 }
-
-
