--- a/v1/style.css
+++ b/v1/style.css
@@ -117,6 +117,7 @@
     border-radius: 2rem;
 }
 
+/* extend swiper */
 .swiper-button-prev:after,
 .swiper-rtl .swiper-button-next:after {
     content: '';
@@ -124,4 +125,15 @@
 .swiper-button-next:after,
 .swiper-rtl .swiper-button-prev:after {
     content: '';
+}
+
+/* extend bootstrap */
+.btn-xxl, .btn-group-lg > .btn {
+    padding: 1rem 3.5rem;
+    font-size: 2rem;
+    border-radius: 1.8rem;
+}
+
+.progress {
+    border-radius: 0.35rem;
 }
